<resources>
    <string name="app_name">Journeyer</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hostButton">Host</string>
    <string name="journeyerButton">Journeyer</string>
    <string name="whoAreYouText">Who are you?</string>
    <string name="loginlogo">LoginLogo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_back_up">Map</string>
</resources>
