<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:contentDescription="@string/loginlogo"
        android:layout_marginTop="50dp" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="36dp">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"></LinearLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:textColorHint="@color/textWhite"
        android:textColor="@color/textWhite"
        android:singleLine="true" />

    <EditText android:id="@+id/password" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:textColorHint="@color/textWhite"
        android:textColor="@color/textWhite"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true" />

    <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/action_sign_in"
        android:textStyle="bold" />

</LinearLayout>
